[metadata]
name = cmb-products
version = 0.0.1
author = Mark A. Jensen
author_email = mark.jensen@nih.gov
description = automate creation of Moonshot Biobank data products
url = https://github.com/CBIIT/cmbiobank-tools
project_urls =
    Bug Tracker = https://github.com/CBIIT/cmbiobank-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >=3.9
scripts =
    cmb-products.py
    cmb2dme.py
package_data=
    cmb-products.yaml
install_requires =
    PyYAML >=5.1.1
    XlsxWriter >=3.0.2
    pyexcel >=0.6.7
    
build_requires =
    build >=0.7.0